--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "eslint --fix"
+      "eslint --fix --max-warnings=0"
     ]
   },
   "dependencies": {
