--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "eslint --fix --max-warnings=0"
+    "src/**/*": [
+      "yarn lint --fix"
     ]
   },
   "dependencies": {
